# DiFipp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.extra.in
include/: BaseFilter.h  BaseFilter.tpp  BilinearTransform.h  Butterworth.h  Butterworth.inl  Butterworth.tpp  CMakeLists.txt  DigitalFilter.h  GenericFilter.h  GenericFilter.inl  GenericFilter.tpp  MovingAverage.h  differentiators.h  difi  fratio  fratio.h  math_utils.h  polynome_functions.h  type_checks.h  typedefs.h
include/gsl/: gsl_assert.h
src/: CMakeLists.txt  GenericFilter.cpp
tests/: ButterworthFilterTests.cpp  CMakeLists.txt  DigitalFilterTests.cpp  FilterTest.cpp  GenericFilterTests.cpp  MovingAverageFilterTests.cpp  catch_helper.h  diffTesters.h  differentiator_tests.cpp  noisy_function_generator.h  polynome_functions_tests.cpp  test_functions.h  warning_macro.h
